[package]
name = "icfp2020"
version = "0.0.0"
authors = []
edition = "2018"

[lib]
name = "icfp"

[[bin]]
name = "app"
path = "app/main.rs"

[[bin]]
name = "decoder"
path = "app/decoder.rs"

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
http-body = "0.3.1"
hound = "3.4.0"
png = "0.16.6"
reqwest = "0.10.6"

[dev-dependencies]

# https://github.com/rhysd/cargo-husky
[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]
