[package]
name = "icfp2020"
version = "0.0.0"
authors = []
edition = "2018"

[lib]
name = "icfp"

[[bin]]
name = "app"
path = "app/main.rs"

[[bin]]
name = "decoder"
path = "app/tools/decoder.rs"

[[bin]]
name = "decoder2"
path = "app/tools/decoder2.rs"

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
http-body = "0.3.1"
hound = "3.4.0"
png = "0.16.6"
reqwest = "0.10.6"
image = "0.23.6"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
svg = "0.8.0"

[dev-dependencies]

# https://github.com/rhysd/cargo-husky
[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "prepush-hook", "run-cargo-test", "run-cargo-fmt"]
